# efrei-dice

./: CMakeLists.txt  Coin.cpp  Coin.h  D20.cpp  D20.h  D4.cpp  D4.h  D6.cpp  D6.h  Dice.cpp  Dice.h  TrickD6.cpp  TrickD6.h  main.cpp
